Bug 1106010: make sure enough UI elements are always visible when not signed in to FxA. r=Niko
UltraBlame original commit: 9386c1c866cff6ef54de1599dd1a3ecdcd5b39ca

--- a/browser/components/loop/content/shared/css/panel.css
+++ b/browser/components/loop/content/shared/css/panel.css
@@ -193,6 +193,7 @@ body {
 
 .room-list {
   max-height: 335px; 
+  min-height: 7px;
   overflow: auto;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
